--- a/ide/debugoptionsfrm.lfm
+++ b/ide/debugoptionsfrm.lfm
@@ -1,12 +1,12 @@
 object DebuggerOptionsForm: TDebuggerOptionsForm
   ActiveControl = cmbDebuggerType
-  BorderStyle = bsDialog
+  BorderStyle = bsSizeToolWin
   Caption = 'Debugger Options'
   ClientHeight = 447
   ClientWidth = 491
   OnCreate = DebuggerOptionsFormCREATE
   OnDestroy = DebuggerOptionsFormDESTROY
-  PixelsPerInch = 112
+  PixelsPerInch = 96
   Position = poScreenCenter
   HorzScrollBar.Page = 490
   VertScrollBar.Page = 446
@@ -17,31 +17,30 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
   object nbDebugOptions: TNotebook
     Align = alTop
     Anchors = [akTop, akLeft, akRight, akBottom]
-    PageIndex = 0
-    Height = 398
-    Width = 491
+    BorderSpacing.Around = 6
+    PageIndex = 3
+    Left = 6
+    Height = 394
+    Top = 6
+    Width = 479
     object pgGeneral: TPage
       Caption = 'General'
-      ClientWidth = 487
+      ClientWidth = 471
       ClientHeight = 368
-      Left = 2
       Height = 368
-      Top = 28
-      Width = 487
+      Width = 471
       object gbDebuggerType: TGroupBox
         Align = alTop
-        BorderSpacing.Left = 2
-        BorderSpacing.Top = 2
-        BorderSpacing.Right = 2
+        BorderSpacing.Around = 6
         Caption = 'Debugger type and path'
-        ClientHeight = 73
-        ClientWidth = 479
+        ClientHeight = 90
+        ClientWidth = 459
         ParentCtl3D = False
         TabOrder = 0
-        Left = 2
+        Left = 6
         Height = 90
-        Top = 2
-        Width = 483
+        Top = 6
+        Width = 459
         object cmbDebuggerType: TComboBox
           Anchors = [akTop, akLeft, akRight]
           MaxLength = 0
@@ -49,9 +48,9 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           ParentCtl3D = False
           TabOrder = 0
           Left = 6
-          Height = 22
+          Height = 21
           Top = 8
-          Width = 466
+          Width = 442
         end
         object cmbDebuggerPath: TComboBox
           Anchors = [akTop, akLeft, akRight]
@@ -59,9 +58,9 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           ParentCtl3D = False
           TabOrder = 1
           Left = 6
-          Height = 22
+          Height = 21
           Top = 40
-          Width = 441
+          Width = 417
         end
         object cmdOpenDebuggerPath: TButton
           Anchors = [akTop, akRight]
@@ -69,7 +68,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           Caption = '...'
           OnClick = cmdOpenDebuggerPathCLICK
           TabOrder = 2
-          Left = 449
+          Left = 425
           Height = 25
           Top = 37
           Width = 23
@@ -77,25 +76,23 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
       end
       object gbAdditionalSearchPath: TGroupBox
         Align = alTop
-        BorderSpacing.Left = 2
-        BorderSpacing.Top = 4
-        BorderSpacing.Right = 2
+        BorderSpacing.Around = 6
         Caption = 'Additional search path'
-        ClientHeight = 39
-        ClientWidth = 479
+        ClientHeight = 56
+        ClientWidth = 459
         ParentCtl3D = False
         TabOrder = 1
-        Left = 2
+        Left = 6
         Height = 56
-        Top = 96
-        Width = 483
+        Top = 102
+        Width = 459
         object txtAdditionalPath: TEdit
           Anchors = [akTop, akLeft, akRight]
           TabOrder = 0
           Left = 6
           Height = 25
           Top = 5
-          Width = 439
+          Width = 415
         end
         object cmdOpenAdditionalPath: TButton
           Anchors = [akTop, akRight]
@@ -103,7 +100,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           Caption = '...'
           OnClick = cmdOpenAdditionalPathClick
           TabOrder = 1
-          Left = 449
+          Left = 425
           Height = 24
           Top = 5
           Width = 23
@@ -111,45 +108,44 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
       end
       object gbDebuggerSpecific: TGroupBox
         Align = alClient
-        BorderSpacing.Left = 2
-        BorderSpacing.Top = 4
-        BorderSpacing.Right = 2
+        BorderSpacing.Around = 6
         Caption = 'Debugger specific options (depends on type of debugger)'
-        ClientHeight = 135
-        ClientWidth = 479
+        ClientHeight = 136
+        ClientWidth = 459
         ParentCtl3D = False
         TabOrder = 2
-        Left = 2
-        Height = 152
-        Top = 216
-        Width = 483
+        Left = 6
+        Height = 136
+        Top = 226
+        Width = 459
         object pnlDebugSpecific: TPanel
           Align = alClient
+          BorderSpacing.Around = 6
           BevelOuter = bvNone
           BorderWidth = 4
-          ClientHeight = 135
-          ClientWidth = 479
+          ClientHeight = 106
+          ClientWidth = 443
           FullRepaint = False
           TabOrder = 0
           TabStop = True
-          Height = 135
-          Width = 479
+          Left = 6
+          Height = 106
+          Top = 6
+          Width = 443
         end
       end
       object gcbDebuggerGeneralOptions: TCheckGroup
         Align = alTop
-        BorderSpacing.Left = 2
-        BorderSpacing.Top = 4
-        BorderSpacing.Right = 2
+        BorderSpacing.Around = 6
         Caption = 'Debugger general options'
         Items.Strings = (
           'Show message on stop'
         )
         TabOrder = 3
-        Left = 2
+        Left = 6
         Height = 56
-        Top = 156
-        Width = 483
+        Top = 164
+        Width = 459
         Data = {
           0100000002
         }
@@ -157,231 +153,244 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
     end
     object pgEventLog: TPage
       Caption = 'Event Log'
-      ClientWidth = 487
+      ClientWidth = 471
       ClientHeight = 368
-      Left = 2
       Height = 368
-      Top = 28
-      Width = 487
+      Width = 471
       object gbGeneral: TGroupBox
+        Align = alTop
+        BorderSpacing.Around = 6
         Caption = 'General'
         ClientHeight = 132
-        ClientWidth = 230
+        ClientWidth = 459
         ParentCtl3D = False
         TabOrder = 0
-        Left = 4
+        Left = 6
         Height = 132
-        Top = 8
-        Width = 230
+        Top = 6
+        Width = 459
         object chkClearLogOnRun: TCheckBox
           AllowGrayed = True
           Caption = 'Clear log on run'
           TabOrder = 0
           Left = 4
-          Height = 24
+          Height = 13
           Top = 5
-          Width = 118
+          Width = 94
         end
         object chkLimitLinecount: TCheckBox
           AllowGrayed = True
           Caption = 'Limit linecount to'
           TabOrder = 1
           Left = 4
-          Height = 24
+          Height = 13
           Top = 29
-          Width = 121
+          Width = 99
         end
         object seLimitLinecount: TSpinEdit
           Enabled = False
           TabOrder = 2
-          Left = 28
+          Left = 46
           Height = 20
-          Top = 53
-          Width = 62
+          Top = 54
+          Width = 66
         end
       end
       object gbMessages: TGroupBox
+        Align = alClient
+        BorderSpacing.Around = 6
         Caption = 'Messages'
-        ClientHeight = 199
-        ClientWidth = 232
+        ClientHeight = 218
+        ClientWidth = 459
         Enabled = False
         ParentCtl3D = False
         TabOrder = 1
-        Left = 242
-        Height = 199
-        Top = 8
-        Width = 232
+        Left = 6
+        Height = 218
+        Top = 144
+        Width = 459
         object chkMessagesBreakpoint: TCheckBox
           AllowGrayed = True
           Caption = 'Breakpoint'
           TabOrder = 0
           Left = 4
-          Height = 24
+          Height = 13
           Top = 5
-          Width = 86
+          Width = 71
         end
         object chkMessagesProcess: TCheckBox
           AllowGrayed = True
           Caption = 'Process'
           TabOrder = 1
           Left = 4
-          Height = 24
+          Height = 13
           Top = 29
-          Width = 72
+          Width = 58
         end
         object chkMessagesThread: TCheckBox
           AllowGrayed = True
           Caption = 'Thread'
           TabOrder = 2
           Left = 4
-          Height = 24
+          Height = 13
           Top = 53
-          Width = 66
+          Width = 54
         end
         object chkMessagesModule: TCheckBox
           AllowGrayed = True
           Caption = 'Module'
           TabOrder = 3
           Left = 4
-          Height = 24
+          Height = 13
           Top = 77
-          Width = 69
+          Width = 55
         end
         object chkMessagesOutput: TCheckBox
           AllowGrayed = True
           Caption = 'Output'
           TabOrder = 4
           Left = 4
-          Height = 24
+          Height = 13
           Top = 101
-          Width = 64
+          Width = 52
         end
         object chkMessagesWindow: TCheckBox
           AllowGrayed = True
           Caption = 'Window'
           TabOrder = 5
           Left = 4
-          Height = 24
+          Height = 13
           Top = 125
-          Width = 71
+          Width = 59
         end
         object chkMessagesInterface: TCheckBox
           AllowGrayed = True
           Caption = 'Interface'
           TabOrder = 6
           Left = 4
-          Height = 24
+          Height = 13
           Top = 149
-          Width = 75
+          Width = 62
         end
       end
     end
     object pgExceptions: TPage
       Caption = 'Language Exceptions'
-      ClientWidth = 487
+      ClientWidth = 471
       ClientHeight = 368
-      Left = 2
       Height = 368
-      Top = 28
-      Width = 487
+      Width = 471
       object bgIgnoreExceptions: TGroupBox
-        Anchors = [akTop, akLeft, akRight, akBottom]
+        Align = alClient
+        BorderSpacing.Around = 6
         Caption = 'Ignore these exceptions'
-        ClientHeight = 328
-        ClientWidth = 479
+        ClientHeight = 337
+        ClientWidth = 459
         ParentCtl3D = False
         TabOrder = 0
-        Left = 4
-        Height = 328
-        Top = 8
-        Width = 479
+        Left = 6
+        Height = 337
+        Top = 6
+        Width = 459
         object cmdExceptionRemove: TButton
           Anchors = [akRight, akBottom]
+          AutoSize = True
           BorderSpacing.InnerBorder = 2
           Caption = 'Remove'
           Enabled = False
           OnClick = cmdExceptionRemoveCLICK
           TabOrder = 0
-          Left = 384
-          Height = 25
-          Top = 294
-          Width = 86
+          Left = 385
+          Height = 29
+          Top = 281
+          Width = 64
         end
         object cmdExceptionAdd: TButton
           Anchors = [akRight, akBottom]
+          AutoSize = True
+          BorderSpacing.Right = 6
           BorderSpacing.InnerBorder = 2
           Caption = 'Add'
           OnClick = cmdExceptionAddCLICK
           TabOrder = 1
-          Left = 291
-          Height = 25
-          Top = 294
-          Width = 86
+          AnchorSideRight.Control = cmdExceptionRemove
+          Left = 336
+          Height = 29
+          Top = 281
+          Width = 43
         end
         object clbExceptions: TCheckListBox
+          Align = alTop
           Anchors = [akTop, akLeft, akRight, akBottom]
+          BorderSpacing.Around = 6
           OnClick = clbExceptionsCLICK
           TabOrder = 2
-          TopIndex = -1
-          Left = 8
-          Height = 281
-          Top = 5
-          Width = 463
+          Left = 6
+          Height = 267
+          Top = 6
+          Width = 443
         end
       end
       object chkBreakOnException: TCheckBox
+        Align = alBottom
         AllowGrayed = True
         Anchors = [akLeft, akBottom]
+        BorderSpacing.Around = 6
         Caption = 'Break on Lazarus Exceptions'
         TabOrder = 1
-        Left = 2
-        Height = 24
-        Top = 340
-        Width = 190
+        Left = 6
+        Height = 13
+        Top = 349
+        Width = 459
       end
     end
     object pgSignals: TPage
       Caption = 'OS Exceptions'
-      ClientWidth = 487
+      ClientWidth = 471
       ClientHeight = 368
-      Left = 2
       Height = 368
-      Top = 28
-      Width = 487
+      Width = 471
       object gbSignals: TGroupBox
-        Anchors = [akTop, akLeft, akRight, akBottom]
+        Align = alClient
+        BorderSpacing.Around = 6
         Caption = 'Signals'
-        ClientHeight = 354
-        ClientWidth = 479
+        ClientHeight = 338
+        ClientWidth = 455
         ParentCtl3D = False
         TabOrder = 0
-        Left = 4
-        Height = 354
-        Top = 8
-        Width = 479
+        Left = 6
+        Height = 356
+        Top = 6
+        Width = 459
         object cmdSignalRemove: TButton
           Anchors = [akRight, akBottom]
+          AutoSize = True
           BorderSpacing.InnerBorder = 2
           Caption = 'Remove'
           Enabled = False
           TabOrder = 0
-          Left = 392
-          Height = 25
-          Top = 322
-          Width = 79
+          Left = 385
+          Height = 29
+          Top = 302
+          Width = 64
         end
         object cmdSignalAdd: TButton
           Anchors = [akRight, akBottom]
+          AutoSize = True
+          BorderSpacing.Right = 6
           BorderSpacing.InnerBorder = 2
           Caption = 'Add'
           TabOrder = 1
-          Left = 307
-          Height = 25
-          Top = 322
-          Width = 79
+          AnchorSideRight.Control = cmdSignalRemove
+          Left = 336
+          Height = 29
+          Top = 302
+          Width = 43
         end
         object lvSignals: TListView
+          Align = alTop
           Anchors = [akTop, akLeft, akRight, akBottom]
+          BorderSpacing.Around = 6
           Columns = <          
             item
               Caption = 'Name'
@@ -400,36 +409,56 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
             end>
           PopupMenu = popSignal
           ViewStyle = vsReport
-          Left = 8
-          Height = 309
-          Top = 5
-          Width = 463
+          Left = 6
+          Height = 288
+          Top = 6
+          Width = 443
         end
       end
     end
   end
-  object cmdCancel: TButton
-    Anchors = [akRight, akBottom]
+  object cmdOK: TBitBtn
     BorderSpacing.InnerBorder = 2
-    Cancel = True
-    Caption = 'Cancel'
-    ModalResult = 2
+    Caption = '&OK'
+    Constraints.MaxHeight = 29
+    Kind = bkOK
+    ModalResult = 1
+    NumGlyphs = 0
+    OnClick = cmdOKCLICK
     TabOrder = 1
-    Left = 400
-    Height = 27
-    Top = 408
+    Left = 410
+    Height = 29
+    Top = 406
     Width = 75
   end
-  object cmdOK: TButton
+  object cmdCancel: TBitBtn
     Anchors = [akRight, akBottom]
+    BorderSpacing.Right = 6
     BorderSpacing.InnerBorder = 2
-    Caption = 'OK'
-    Default = True
-    OnClick = cmdOKCLICK
+    Caption = 'Cancel'
+    Constraints.MaxHeight = 29
+    Kind = bkCancel
+    ModalResult = 2
+    NumGlyphs = 0
     TabOrder = 2
-    Left = 310
-    Height = 27
-    Top = 408
+    AnchorSideRight.Control = cmdOK
+    Left = 329
+    Height = 29
+    Top = 406
+    Width = 75
+  end
+  object btnHelp: TBitBtn
+    Anchors = [akLeft, akBottom]
+    BorderSpacing.InnerBorder = 2
+    Caption = '&Help'
+    Constraints.MaxHeight = 29
+    Enabled = False
+    Kind = bkHelp
+    NumGlyphs = 0
+    TabOrder = 3
+    Left = 6
+    Height = 29
+    Top = 406
     Width = 75
   end
   object popSignal: TPopupMenu
